--- a/fonts/fonts/style.css
+++ b/fonts/fonts/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?z7xkin');
-  src:  url('fonts/icomoon.eot?z7xkin#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?z7xkin') format('truetype'),
-    url('fonts/icomoon.woff?z7xkin') format('woff'),
-    url('fonts/icomoon.svg?z7xkin#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?npxxf9');
+  src:  url('fonts/icomoon.eot?npxxf9#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?npxxf9') format('truetype'),
+    url('fonts/icomoon.woff?npxxf9') format('woff'),
+    url('fonts/icomoon.svg?npxxf9#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-iconfinder_3249818_health_treatment_massage_beauty_illustration_icon:before {
+  content: "\e902";
+}
+.icon-arrow-up:before {
+  content: "\e90d";
+}
 .icon-close:before {
   content: "\e900";
 }
